Fix T55256: Animation Noise modifier does not update on value change

Animation needs tagging in depsgraph (for animation refresh), instead of only
tagging AnimData->recalc